--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -199,11 +199,11 @@
         class="flex-col items-center flex-grow hidden md:pb-0 md:flex md:justify-end md:flex-row">
         <a
           class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400 lg:ml-auto"
-          href="#features">Features</a
+          href="/#features">Features</a
         >
         <a
           class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
-          href="#pricing">Pricing</a
+          href="/#pricing">Pricing</a
         >
 
         <a
