fixed text on hero

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -3,10 +3,25 @@
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
     <div>
       <div class="text-center max-w-4xl mx-auto">
+        <div class="sm:mb-8 sm:flex sm:justify-center">
+          <div
+            class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+            <a
+              href="https://lexingtonthemes.com/free-templates/"
+              class="font-semibold text-indigo-600"
+              ><span class="absolute inset-0" aria-hidden="true"></span>
+              <span class="block lg:inline">
+                More free & Premium templates <span aria-hidden="true"
+                  >&rarr;</span
+                >
+              </span>
+            </a>
+          </div>
+        </div>
         <p
           class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
-          A starter template built with Astro and Tailwind CSS for your newest
-          project.
+          A starter template built with Astro and Tailwind CSS for your next
+          project
         </p>
         <p class="text-slate-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
           Putting together a directory website was a challenge. Superstash lets
@@ -15,15 +30,14 @@
       </div>
       <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
         <a
+          class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
+          href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
+        >
+        <a
           class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
           href="https://lexingtonthemes.com"
-          >Lexington Themes
+          >Lexington Themes &nbsp; &rarr;
         </a>
-        <a
-          class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full"
-          href="https://github.com/michael-andreuzza/astrosaas"
-          >GitHub &nbsp; &rarr;</a
-        >
       </div>
       <dl
         class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
