--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -60,9 +60,4 @@ ______________________________________________________________________
 <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
 <!-- Analytics   -->
 
-<script
-  async
-  defer
-  data-website-id="1723e72e-f799-4e0c-9dfe-6593bf7ca76e"
-  src="https://stats.andreuzza.com/umami.js"
-></script>
+<script async defer data-website-id="ba512e9f-3bba-425f-9b1a-186fa5755e5d" src="https://stats.andreuzza.com/umami.js"></script>
