fixed margin on hero heading

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -3,7 +3,7 @@
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
     <div>
       <div class="text-center max-w-4xl mx-auto">
-        <div class="sm:mb-8 sm:flex sm:justify-center">
+        <div class="sm:flex sm:justify-center">
           <div
             class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
             <a
@@ -19,7 +19,7 @@
           </div>
         </div>
         <p
-          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
+          class="text-black mt-8 font-extrabold lg:text-5xl text-4xl tracking-tight">
           A starter template built with Astro and Tailwind CSS for your next
           project
         </p>
